--- a/server/index.html
+++ b/server/index.html
@@ -5,8 +5,7 @@
         <meta charset="UTF-8">
         <title>Demo test</title>
         <meta content="width=device-width, initial-scale=1" name="viewport" />
-        
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,800" rel="stylesheet">
 
     </head>
 
