--- a/server/index.html
+++ b/server/index.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="UTF-8">
-        <title>Demo test</title>
+        <title>Express Physio</title>
         <meta content="width=device-width, initial-scale=1" name="viewport" />
     </head>
 
